# fastapi-charging-station

./: .gitignore  README.md
backend/: .env  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 2dd6ad81bfd0_test.py  93089ee6d83f_repaired_types.py  cd132479ab68_unique_fields_added.py  e820684644ea_added_validation_and_enum_constraint.py  edcd502863b0_added_validation_and_enum_constraint.py~
backend/src/auth/: auth.py
backend/src/config/: config.py  database.py  logger.py
backend/src/models/: charging_station.py  user.py
backend/src/routes/: stations.py  users.py
backend/src/schemas/: charging_station.py  pagination.py  user.py
backend/src/scripts/: fixtures.py
backend/src/util/: crud.py  dependencies.py
backend/tests/: test_charging_stations.py
backend/tests/config/: config.py
